test/corpus/docs/special_objects/grid-diagrams.txt
====================|||
Big Example
====================|||

grid-rows: 5
style.fill: black

classes: {
  white square: {
    label: ""
    width: 120
    style: {
      fill: white
      stroke: cornflowerblue
      stroke-width: 10
    }
  }
  block: {
    style: {
      text-transform: uppercase
      font-color: white
      fill: darkcyan
      stroke: black
    }
  }
}

flow1.class: white square
flow2.class: white square
flow3.class: white square
flow4.class: white square
flow5.class: white square
flow6.class: white square
flow7.class: white square
flow8.class: white square
flow9.class: white square

dagger engine: {
  width: 800
  class: block
  style: {
    fill: beige
    stroke: darkcyan
    font-color: blue
    stroke-width: 8
  }
}

any docker compatible runtime: {
  width: 800
  class: block
  style: {
    fill: lightcyan
    stroke: darkcyan
    font-color: black
    stroke-width: 8
  }
  icon: https://icons.terrastruct.com/dev%2Fdocker.svg
}

any ci: {
  class: block
  style: {
    fill: gold
    stroke: maroon
    font-color: maroon
    stroke-width: 8
  }
}

windows.class: block
linux.class: block
macos.class: block
kubernetes.class: block

---|||

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (block
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (block
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label))))))
      (declaration
        (identifier)
        (block
          (declaration
            (identifier)
            (block
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label))))))))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (block
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))))))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (block
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))))
      (declaration
        (identifier)
        (label))))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (block
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))))))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label)))


====================|||
Just grid-rows
====================|||

grid-rows: 3
Executive
Legislative
Judicial

---|||

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier)))

====================|||
Just grid-cols
====================|||

grid-columns: 3
Executive
Legislative
Judicial

---|||

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier)))

====================|||
Both grid-cols & grid-rows
====================|||

grid-rows: 2
grid-columns: 2
Executive
Legislative
Judicial

---|||

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier)))

====================|||
Width and Height
====================|||

grid-rows: 2
Executive
Legislative
Judicial
The American Government.width: 400
The American Government.height: 400

---|||

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label)))

====================|||
Cells expand to fill
====================|||

grid-rows: 3
Executive
Legislative
Judicial
The American Government.width: 400
Voters
Non-voters

---|||

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier))
  (declaration
    (identifier)))


====================|||
Table
====================|||

grid-rows: 2
grid-columns: 4
grid-gap: 0

classes: {
  header: {
    style.underline: true
  }
}

Element.class: header
Atomic Number.class: header
Atomic Mass.class: header
Melting Point.class: header

Hydrogen
1
"1.008"
"-259.16"

Carbon
6
"12.011"
3500

Oxygen
8
"15.999"
"-218.79"

---|||

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (block
          (declaration
            (identifier
              (identifier))
            (label))))))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier
      (identifier))
    (label))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier)))

====================|||
Width and Height
====================|||

grid-gap: 0
grid-columns: 1
header
body: "" {
  grid-gap: 0
  grid-columns: 2
  content
  sidebar
}
footer

---|||

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier))
  (declaration
    (identifier)
    (label)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier))
      (declaration
        (identifier))))
  (declaration
    (identifier)))

====================|||
Alignment
====================|||

classes: {
  invisible: {
    style.opacity: 0
    label: a
  }
}

grid-columns: 1
us-east-1: {
  grid-rows: 1
  a
  b
  c
  d
  e
}

us-west-1: {
  grid-rows: 1
  pad1.class: invisible
  pad2.class: invisible
  a
  # Move the label so it doesn't go through the connection
  label.near: bottom-center
}

us-east-1.c -> us-west-1.a

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (block
          (declaration
            (identifier
              (identifier))
            (label))
          (declaration
            (identifier)
            (label))))))
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier))
      (declaration
        (identifier))
      (declaration
        (identifier))
      (declaration
        (identifier))
      (declaration
        (identifier))))
  (declaration
    (identifier)
      (block
        (declaration
          (identifier)
            (label))
          (declaration
            (identifier
              (identifier))
            (label))
          (declaration
            (identifier
              (identifier))
            (label))
          (declaration
            (identifier))
          (comment)
          (declaration
            (identifier
              (identifier))
            (label))))
  (declaration
    (identifier
      (identifier))
    (connection)
    (identifier
      (identifier))))
